--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "author": "Piero Dotti",
   "license": "MIT",
   "scripts": {
-		"lambda": "serverless offline start",
+    "lambda": "serverless offline start",
     "start": "npx ts-node src/bin/www.ts",
     "watch": "npx nodemon",
     "build": "npx tsc"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chrome-aws-lambda": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.17.1",
     "http-status-codes": "^1.3.2",
     "morgan": "^1.9.1",
-    "puppeteer": "^1.17.0"
+    "puppeteer-core": "^1.20.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.27",
@@ -26,7 +27,8 @@
     "@types/express": "^4.16.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.6.4",
-    "@types/puppeteer": "^1.12.4",
+    "@types/puppeteer": "^1.19.1",
+    "@types/puppeteer-core": "^1.9.0",
     "nodemon": "^1.18.10",
     "serverless-apigw-binary": "^0.4.4",
     "serverless-offline": "^5.0.1",
