--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "http-status-codes": "^1.3.2",
     "morgan": "^1.9.1",
-    "puppeteer-core": "^1.20.0"
+    "puppeteer-core": "^1.20.0",
+    "puppeteer": "^1.20.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.27",
