--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "express": "^4.17.1",
     "http-status-codes": "^1.3.2",
     "morgan": "^1.9.1",
+    "puppeteer": "^1.20.0",
     "puppeteer-core": "^1.20.0",
-    "puppeteer": "^1.20.0"
+    "raven": "^2.6.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.27",
