:new: Upgrade stack to node12.x

--- a/serverless.yml
+++ b/serverless.yml
@@ -40,7 +40,7 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs12.x
 
 # you can overwrite defaults here
   stage: prod
